--- a/toolkit/smart-contracts/plutus-data/Cargo.toml
+++ b/toolkit/smart-contracts/plutus-data/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 
 [dependencies]
 log = { workspace = true }
-sidechain-domain = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, features = ["std"] }
 
 cardano-serialization-lib = { workspace = true }
 thiserror = { workspace = true }
