--- a/toolkit/sidechain/rpc/Cargo.toml
+++ b/toolkit/sidechain/rpc/Cargo.toml
@@ -16,7 +16,7 @@ workspace = true
 parity-scale-codec = { workspace = true, features = ['std'] }
 scale-info = { workspace = true, features = ['std'] }
 jsonrpsee = { workspace = true }
-serde = { workspace = true, default-features = true }
+serde = { workspace = true }
 sp-core = { workspace = true, features = ['std'] }
 sp-runtime = { workspace = true, features = ['std'] }
 sp-api = { workspace = true, features = ['std'] }
