--- a/.github/actions/tests/k8s-direct-tests/action.yml
+++ b/.github/actions/tests/k8s-direct-tests/action.yml
@@ -7,6 +7,9 @@ inputs:
   pod:
     description: "K8s pod name"
     required: true
+  env:
+    description: "Environment name (e.g., ci-preview, devnet)"
+    required: true
 
 outputs: {}
 
@@ -38,6 +41,30 @@ runs:
         kubectl config set-context my-context --cluster=my-cluster --user=github-actions --namespace=default > /dev/null 2>&1 || { echo "❌ Failed to set context"; exit 1; }
         kubectl config use-context my-context > /dev/null 2>&1 || { echo "❌ Failed to use context"; exit 1; }
       shell: bash
+
+    - name: Load Environment Variables
+      shell: bash
+      run: |
+        # Load environment-specific variables
+        if [ -f "dev/envs/${{ inputs.env }}/.envrc" ]; then
+          set -a
+          source "dev/envs/${{ inputs.env }}/.envrc"
+          set +a
+        else
+          echo "❌ Environment file not found: dev/envs/${{ inputs.env }}/.envrc"
+          exit 1
+        fi
+        
+        # Load addresses
+        if [ -f "dev/envs/${{ inputs.env }}/addresses.json" ]; then
+          export COMMITTEE_CANDIDATE_ADDRESS=$(jq -r '.addresses.CommitteeCandidateValidator' "dev/envs/${{ inputs.env }}/addresses.json")
+          export D_PARAMETER_POLICY_ID=$(jq -r '.policyIds.DParameter' "dev/envs/${{ inputs.env }}/addresses.json")
+          export PERMISSIONED_CANDIDATES_POLICY_ID=$(jq -r '.policyIds.PermissionedCandidates' "dev/envs/${{ inputs.env }}/addresses.json")
+          export RESERVE_VALIDATOR_ADDRESS=$(jq -r '.addresses.ReserveValidator' "dev/envs/${{ inputs.env }}/addresses.json")
+        else
+          echo "❌ Addresses file not found: dev/envs/${{ inputs.env }}/addresses.json"
+          exit 1
+        fi
 
     - name: Fetch Sidechain Status
       shell: bash
@@ -222,63 +249,76 @@ runs:
       shell: bash
       continue-on-error: true
       run: |
-        # Get current MC epoch
-        MC_EPOCH=$(jq '.result.mainchain.epoch' status.json)
-        
-        # Get Ariadne parameters
-        ARIADNE_PARAMS=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
+        # Get current epoch committee
+        echo "Getting current epoch committee..."
+        COMMITTEE_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
-          -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getAriadneParameters\",\"params\":[$MC_EPOCH],\"id\":1}" \
+          -d '{"jsonrpc":"2.0","method":"sidechain_getEpochCommittee","params":[],"id":1}' \
           http://localhost:9933)
         
-        # Check if Ariadne parameters are valid
-        if ! echo "$ARIADNE_PARAMS" | jq -e '.result' > /dev/null; then
-          echo "❌ Failed to get Ariadne parameters: $(echo "$ARIADNE_PARAMS" | jq -r '.error.message // "Unknown error"')"
+        # Check if committee response is valid
+        if ! echo "$COMMITTEE_RESPONSE" | jq -e '.result' > /dev/null; then
+          echo "❌ Failed to get epoch committee: $(echo "$COMMITTEE_RESPONSE" | jq -r '.error.message // "Unknown error"')"
+          echo "Full committee response: $COMMITTEE_RESPONSE"
           exit 1
         fi
         
-        # Get current committee
-        COMMITTEE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
+        # Get current d-parameter
+        echo "Getting current d-parameter..."
+        D_PARAM_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
-          -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getCommittee\",\"params\":[$MC_EPOCH],\"id\":1}" \
+          -d '{"jsonrpc":"2.0","method":"sidechain_getDParameter","params":[],"id":1}' \
           http://localhost:9933)
         
-        # Check if committee data is valid
-        if ! echo "$COMMITTEE" | jq -e '.result' > /dev/null; then
-          echo "❌ Failed to get committee data: $(echo "$COMMITTEE" | jq -r '.error.message // "Unknown error"')"
+        # Check if d-parameter response is valid
+        if ! echo "$D_PARAM_RESPONSE" | jq -e '.result' > /dev/null; then
+          echo "❌ Failed to get d-parameter: $(echo "$D_PARAM_RESPONSE" | jq -r '.error.message // "Unknown error"')"
+          echo "Full d-parameter response: $D_PARAM_RESPONSE"
           exit 1
         fi
         
-        # Extract d-parameter values
-        P_CANDIDATES=$(echo "$ARIADNE_PARAMS" | jq -r '.result.dParameter.numPermissionedCandidates')
-        T_CANDIDATES=$(echo "$ARIADNE_PARAMS" | jq -r '.result.dParameter.numRegisteredCandidates')
+        D_PARAM=$(echo "$D_PARAM_RESPONSE" | jq -r '.result')
         
-        if [ -z "$P_CANDIDATES" ] || [ "$P_CANDIDATES" = "null" ] || [ -z "$T_CANDIDATES" ] || [ "$T_CANDIDATES" = "null" ]; then
-          echo "❌ Invalid d-parameter values"
+        if [ -z "$D_PARAM" ] || [ "$D_PARAM" = "null" ]; then
+          echo "❌ Invalid d-parameter received"
           exit 1
         fi
         
-        # Count committee members by type
-        P_COUNT=$(echo "$COMMITTEE" | jq '.result | map(select(.type == "permissioned")) | length')
-        T_COUNT=$(echo "$COMMITTEE" | jq '.result | map(select(.type == "trustless")) | length')
-        
-        if [ -z "$P_COUNT" ] || [ "$P_COUNT" = "null" ] || [ -z "$T_COUNT" ] || [ "$T_COUNT" = "null" ]; then
-          echo "❌ Invalid committee member counts"
-          exit 1
-        fi
+        echo "Current d-parameter: $D_PARAM"
         
         # Calculate expected ratio
-        EXPECTED_RATIO=$(echo "scale=4; $P_CANDIDATES / ($P_CANDIDATES + $T_CANDIDATES)" | bc)
-        ACTUAL_RATIO=$(echo "scale=4; $P_COUNT / ($P_COUNT + $T_COUNT)" | bc)
+        EXPECTED_RATIO=$(echo "scale=4; $D_PARAM / 100" | bc)
+        echo "Expected ratio: $EXPECTED_RATIO"
         
-        # Allow for some deviation (e.g., 10%)
-        DEVIATION=$(echo "scale=4; $EXPECTED_RATIO - $ACTUAL_RATIO" | bc | tr -d '-')
-        if (( $(echo "$DEVIATION > 0.1" | bc -l) )); then
-          echo "❌ Committee ratio deviation too high. Expected: $EXPECTED_RATIO, Actual: $ACTUAL_RATIO"
+        # Get committee members and calculate actual ratio
+        COMMITTEE_MEMBERS=$(echo "$COMMITTEE_RESPONSE" | jq -r '.result | length')
+        PERMISSIONED_MEMBERS=$(echo "$COMMITTEE_RESPONSE" | jq -r '.result | map(select(.permissioned == true)) | length')
+        
+        if [ "$COMMITTEE_MEMBERS" -eq 0 ]; then
+          echo "❌ No committee members found"
           exit 1
         fi
         
-        echo "✅ Committee ratio test passed."
+        ACTUAL_RATIO=$(echo "scale=4; $PERMISSIONED_MEMBERS / $COMMITTEE_MEMBERS" | bc)
+        echo "Actual ratio: $ACTUAL_RATIO"
+        
+        # Compare ratios with tolerance
+        TOLERANCE=0.1
+        RATIO_DIFF=$(echo "scale=4; $ACTUAL_RATIO - $EXPECTED_RATIO" | bc)
+        RATIO_DIFF_ABS=$(echo "scale=4; if ($RATIO_DIFF < 0) -($RATIO_DIFF) else $RATIO_DIFF fi" | bc)
+        
+        if (( $(echo "$RATIO_DIFF_ABS <= $TOLERANCE" | bc -l) )); then
+          echo "✅ Committee ratio compliance test passed."
+          echo "Expected ratio: $EXPECTED_RATIO"
+          echo "Actual ratio: $ACTUAL_RATIO"
+          echo "Difference: $RATIO_DIFF (within tolerance of $TOLERANCE)"
+        else
+          echo "❌ Committee ratio compliance test failed."
+          echo "Expected ratio: $EXPECTED_RATIO"
+          echo "Actual ratio: $ACTUAL_RATIO"
+          echo "Difference: $RATIO_DIFF (exceeds tolerance of $TOLERANCE)"
+          exit 1
+        fi
 
     - name: Test Committee Members Rotate
       shell: bash
@@ -327,12 +367,15 @@ runs:
           -d '{"jsonrpc":"2.0","method":"sidechain_getStatus","params":[],"id":1}' \
           http://localhost:9933 | jq -r '.result.sidechain.epoch')
         
+        echo "Current PC epoch: $PC_EPOCH"
+        
         if [ -z "$PC_EPOCH" ] || [ "$PC_EPOCH" = "null" ]; then
           echo "❌ Failed to get current PC epoch"
           exit 1
         fi
         
         # Get epoch committee for current epoch
+        echo "Getting epoch committee for epoch $PC_EPOCH..."
         COMMITTEE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getEpochCommittee\",\"params\":[$PC_EPOCH],\"id\":1}" \
@@ -341,10 +384,12 @@ runs:
         # Check if committee data is valid
         if ! echo "$COMMITTEE" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get committee data: $(echo "$COMMITTEE" | jq -r '.error.message // "Unknown error"')"
+          echo "Full committee response: $COMMITTEE"
           exit 1
         fi
         
         # Get authorities list
+        echo "Getting authorities list..."
         AUTHORITIES=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d '{"jsonrpc":"2.0","method":"authority_set","params":[],"id":1}' \
@@ -353,6 +398,12 @@ runs:
         # Check if authorities data is valid
         if ! echo "$AUTHORITIES" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get authorities data: $(echo "$AUTHORITIES" | jq -r '.error.message // "Unknown error"')"
+          echo "Full authorities response: $AUTHORITIES"
+          echo "Available RPC methods:"
+          kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
+            curl -s -H "Content-Type: application/json" \
+            -d '{"jsonrpc":"2.0","method":"rpc_methods","params":[],"id":1}' \
+            http://localhost:9933 | jq '.result.methods'
           exit 1
         fi
         
@@ -361,16 +412,22 @@ runs:
         
         if [ -z "$COMMITTEE_KEYS" ]; then
           echo "❌ No committee members found"
+          echo "Committee data: $COMMITTEE"
           exit 1
         fi
+        
+        echo "Committee members: $COMMITTEE_KEYS"
         
         # Extract authority addresses
         AUTHORITY_ADDRESSES=$(echo "$AUTHORITIES" | jq -r '.result[]')
         
         if [ -z "$AUTHORITY_ADDRESSES" ]; then
           echo "❌ No authorities found"
+          echo "Authorities data: $AUTHORITIES"
           exit 1
         fi
+        
+        echo "Authorities: $AUTHORITY_ADDRESSES"
         
         # Check if all committee members are in authorities
         for KEY in $COMMITTEE_KEYS; do
@@ -400,8 +457,10 @@ runs:
       run: |
         # Get current MC epoch
         MC_EPOCH=$(jq '.result.mainchain.epoch' status.json)
+        echo "Current MC epoch: $MC_EPOCH"
         
         # Get Ariadne parameters with epoch
+        echo "Getting Ariadne parameters for epoch $MC_EPOCH..."
         ARIADNE_PARAMS=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getAriadneParameters\",\"params\":[$MC_EPOCH],\"id\":1}" \
@@ -410,18 +469,24 @@ runs:
         # Check if Ariadne parameters response is valid
         if ! echo "$ARIADNE_PARAMS" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get Ariadne parameters: $(echo "$ARIADNE_PARAMS" | jq -r '.error.message // "Unknown error"')"
+          echo "Full Ariadne parameters response: $ARIADNE_PARAMS"
           exit 1
         fi
         
         # Get stake key hash from the first permissioned candidate
+        echo "Extracting stake key hash from first permissioned candidate..."
         STAKE_KEY_HASH=$(echo "$ARIADNE_PARAMS" | jq -r '.result.permissionedCandidates[0].mainchainPublicKey')
         
         if [ -z "$STAKE_KEY_HASH" ] || [ "$STAKE_KEY_HASH" = "null" ]; then
           echo "❌ Failed to get stake key hash from Ariadne parameters"
+          echo "Permissioned candidates: $(echo "$ARIADNE_PARAMS" | jq -r '.result.permissionedCandidates')"
           exit 1
         fi
         
+        echo "Stake key hash: $STAKE_KEY_HASH"
+        
         # Get address association
+        echo "Getting address association for stake key hash $STAKE_KEY_HASH..."
         ASSOCIATION=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getAddressAssociation\",\"params\":[\"$STAKE_KEY_HASH\"],\"id\":1}" \
@@ -430,6 +495,7 @@ runs:
         # Check if association response is valid
         if ! echo "$ASSOCIATION" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get address association: $(echo "$ASSOCIATION" | jq -r '.error.message // "Unknown error"')"
+          echo "Full association response: $ASSOCIATION"
           exit 1
         fi
         
@@ -447,6 +513,7 @@ runs:
       continue-on-error: true
       run: |
         # Get latest block hash
+        echo "Getting latest block hash..."
         BLOCK_HASH_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d '{"jsonrpc":"2.0","method":"chain_getHeader","params":[],"id":1}' \
@@ -455,6 +522,7 @@ runs:
         # Check if block hash response is valid
         if ! echo "$BLOCK_HASH_RESPONSE" | jq -e '.result.hash' > /dev/null; then
           echo "❌ Failed to get block hash: $(echo "$BLOCK_HASH_RESPONSE" | jq -r '.error.message // "Unknown error"')"
+          echo "Full block hash response: $BLOCK_HASH_RESPONSE"
           exit 1
         fi
         
@@ -465,7 +533,10 @@ runs:
           exit 1
         fi
         
+        echo "Block hash: $BLOCK_HASH"
+        
         # Get block production log
+        echo "Getting block production log for block hash $BLOCK_HASH..."
         PRODUCTION_LOG=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getBlockProductionLog\",\"params\":[\"$BLOCK_HASH\"],\"id\":1}" \
@@ -474,6 +545,7 @@ runs:
         # Check if production log response is valid
         if ! echo "$PRODUCTION_LOG" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get block production log: $(echo "$PRODUCTION_LOG" | jq -r '.error.message // "Unknown error"')"
+          echo "Full production log response: $PRODUCTION_LOG"
           exit 1
         fi
         
@@ -496,8 +568,10 @@ runs:
       run: |
         # Get current MC epoch
         MC_EPOCH=$(jq '.result.mainchain.epoch' status.json)
+        echo "Current MC epoch: $MC_EPOCH"
         
         # Get Ariadne parameters with epoch
+        echo "Getting Ariadne parameters for epoch $MC_EPOCH..."
         ARIADNE_PARAMS=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getAriadneParameters\",\"params\":[$MC_EPOCH],\"id\":1}" \
@@ -506,18 +580,24 @@ runs:
         # Check if Ariadne parameters response is valid
         if ! echo "$ARIADNE_PARAMS" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to get Ariadne parameters: $(echo "$ARIADNE_PARAMS" | jq -r '.error.message // "Unknown error"')"
+          echo "Full Ariadne parameters response: $ARIADNE_PARAMS"
           exit 1
         fi
         
         # Get payment key from the first permissioned candidate
+        echo "Extracting payment key from first permissioned candidate..."
         PAYMENT_KEY=$(echo "$ARIADNE_PARAMS" | jq -r '.result.permissionedCandidates[0].mainchainPublicKey')
         
         if [ -z "$PAYMENT_KEY" ] || [ "$PAYMENT_KEY" = "null" ]; then
           echo "❌ Failed to get payment key from Ariadne parameters"
+          echo "Permissioned candidates: $(echo "$ARIADNE_PARAMS" | jq -r '.result.permissionedCandidates')"
           exit 1
         fi
         
+        echo "Payment key: $PAYMENT_KEY"
+        
         # Initialize reserve
+        echo "Initializing reserve with payment key $PAYMENT_KEY..."
         INIT_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_initReserve\",\"params\":[\"$PAYMENT_KEY\"],\"id\":1}" \
@@ -526,6 +606,7 @@ runs:
         # Check if init response is valid
         if ! echo "$INIT_RESPONSE" | jq -e '.result' > /dev/null; then
           echo "❌ Failed to initialize reserve: $(echo "$INIT_RESPONSE" | jq -r '.error.message // "Unknown error"')"
+          echo "Full init response: $INIT_RESPONSE"
           exit 1
         fi
         
