--- a/toolkit/cli/commands/Cargo.toml
+++ b/toolkit/cli/commands/Cargo.toml
@@ -12,13 +12,11 @@ clap = { workspace = true }
 ed25519-zebra = { workspace = true }
 hex = { workspace = true }
 hex-literal = { workspace = true }
-plutus = { workspace = true, default-features = true }
-plutus-datum-derive = { workspace = true, default-features = true }
+plutus = { workspace = true }
+plutus-datum-derive = { workspace = true }
 secp256k1 = { workspace = true, features = ["std", "global-context"] }
-sidechain-domain = { workspace = true, default-features = true, features = [
-	"std",
-] }
-sp-io = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, features = ["std"] }
+sp-io = { workspace = true, features = ["std"] }
 thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
