--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -12,7 +12,8 @@ markers =
     committee_members: run tests for Committee Members feature
     mc_state_reference_block: run tests for Mainchain State Reference feature
     block_production_log: run test for block production log pallet
-    reserve: run tests for Reserve Managemenet System feature
+    reserve: run tests for Reserve Management System feature
+    reserve_init: run tests initializing the Reserve Management System
     rpc: run tests for RPC endpoints
     substrate: run tests for Substrate framework core features
     test_key: key for xray
