--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -34,6 +34,9 @@ substrate-prometheus-endpoint = { workspace = true }
 derive-new = { workspace = true }
 lru = { workspace = true }
 sp-timestamp = { workspace = true, features = ["std"] }
+sp-governed-map = { workspace = true, features = [
+    "std",
+], optional = true }
 sp-native-token-management = { workspace = true, features = [
     "std",
 ], optional = true }
@@ -57,6 +60,7 @@ testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
 default = []
 block-source = []
 candidate-source = ["authority-selection-inherents"]
+governed-map = ["sp-governed-map"]
 native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash", "block-source"]
 sidechain-rpc = ["pallet-sidechain-rpc", "block-source"]
